[package]
name = "invaders"
version = "0.1.0"
edition = "2021"
default-run = "console_emulation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1.7"
regex = "1.5"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'KeyboardEvent',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',

]

[[bin]]
name = "console_emulation"