[package]
name = "invaders"
version = "0.1.0"
edition = "2021"
default-run = "console_emulation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1.7"
regex = "1.5"
lazy_static = "1.4.0"
bitvec = "0.22.3"
futures = "0.3"
tokio = { version = "0.2.25", features = ["sync", "time", "macros"] }
fluvio-wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'ImageData',
  'KeyboardEvent',
  'Node',
  'Window',
  'console',

]

[[bin]]
name = "console_emulation"