[package]
name = "invaders"
version = "0.1.0"
edition = "2021"
default-run = "console_emulation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
bitvec = "0.22.3"
futures = "0.3"
lazy_static = "1.4.0"
itertools = "0.10"
regex = "1.5"
tokio = { version = "0.2.25", features = ["sync", "time", "macros"] }


[target.'cfg(target_arch = "x86_64")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
fluvio-wasm-timer = "0.2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'ImageData',
  'KeyboardEvent',
  'Node',
  'Window',
  'console',

]

[build-dependencies]
cc = "1.0"

[[bin]]
name = "console_emulation"
